# aoc

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  api.html  examples.html  genindex.html  graph.html  interval.html  intro.html  io.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  util.html
.github/workflows/: build_book.yml  ci.yml  style.yml
_modules/: index.html
_modules/aoc/: board.html  flow.html  graph.html  interval.html  io.html  util.html
_sources/: api.rst  examples.md  io.rst
aoc/: __init__.py  board.py  flow.py  graph.py  interval.py  io.py  util.py
docs/: _config.yml  _toc.yml  api.rst  examples.md  graph.rst  interval.rst  intro.md  util.rst
tests/: conftest.py  test_board.py  test_graph.py  test_interval.py
