[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aoc"
description = "Utilities for Advent of Code problems."
authors = [
    {name="Wessel Bruinsma", email="wessel.p.bruinsma@gmail.com"},
]
license = {text="MIT"}
readme = "README.md"
dynamic = ["version"]

requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "numpy",
    "pytest>=6",
    "pytest-cov",
    "coveralls",
    "pre-commit",
    "IPython",
    "black==23.7.0",
    "ghp-import",
    "wheel",
    "build",
    "tox",
    "jupyter-book<2",
    "mypy",
    "pyright",
]

[project.urls]
repository = "https://github.com/wesselb/aoc"

[tool.hatch.build]
include = ["aoc*"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "aoc/_version.py"

# Tests:

[tool.coverage.run]
branch = true
command_line = "-m pytest --verbose test"
source = ["aoc"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

# Formatting tools:

[tool.black]
line-length = 88
target-version = ["py10"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
src_paths = ["aoc", "tests"]
